Fix horizontal overflow on body

--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,13 @@
 }
 
 html,
-body,
+body {
+    width: 100%;
+    overflow-x: clip;
+}
+
 #root {
     width: 100%;
-    overflow-x: hidden;
 }
 
 .scrollbar-hide::-webkit-scrollbar {
